AAC Audio 7.1 LibFDK_aac codec doesn't work in VLC
Audio 7.1 LibFDK_aac codec doesn't work in VLC, but its work with audio 5.1 LibFDK_aac.
And work fine with Audio 7.1 aac codec.
Tested on Windows, Ubuntu, MacOSX using VLC Version 2.2.1
Audio 7.1 LibFDK_aac codec doesn't work in VLC, but its work with audio 5.1 LibFDK_aac.
And work fine with Audio 7.1 aac codec.
Tested on Windows, Ubuntu, MacOSX using VLC Version 2.2.1
added Component::Decoders label
Please share a sample.
I've been twice uploading video sample for trac ticket 16457 here: http://streams.videolan.org/upload/
If the file isn't found, you can get it here: https://drive.google.com/file/d/0B_Eu621PLz0uM3dHTzVlZ2tvRkU/view?usp=sharing
assigned to @fcartegnie
Works with avcodec decoder.
changed title from Audio 7.1 LibFDK_aac codec doesn't work in VLC to AAC Audio 7.1 LibFDK_aac codec doesn't work in VLC
non std channel mapping
changed the description
added Status::fixed label
closed
changed milestone to %3.0 FF
sample is a stereo sample, hence all other channels are totally silent !
Seriously WTF.
Milestone renamed
mentioned in issue #18273 (closed)
VideoLAN code repository instance