codec: faad: fix FDK channel ordering (fix #16457)

FAAD can't properly map channels with instance > 2.
This will fix it at least for the FDK setup.